# diffpilot

./: README.man  README.md  diffpilot.py  diffpilot.yaml  pyproject.toml  requirements.txt
diffpilot/: __init__.py  core.py  main.py
diffpilot/diffpilot/static/: mockup.html
diffpilot/diffpilot/static/js/: main.js
diffpilot/static/css/: custom.css  main.css  prism-monokai.min.css
diffpilot/static/js/: main.js
diffpilot/templates/: base.html  diff.html  diff_cards.html  footer.html  index.html
